Update grpcio and grpcio-tools versions in requirements.txt

--- a/client/requirements.txt
+++ b/client/requirements.txt
@@ -2,8 +2,8 @@ flatbuffers
 flask
 streamlit
 requests
-grpcio
-grpcio-tools
+grpcio>=1.78.0
+grpcio-tools>=1.78.0
 protobuf
 pyzmq
 psycopg2-binary
